--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,120 @@ body {
     line-height: 1.5;
  }
 
- 
+.container {
+    max-width: 2300px;
+    margin: auto;
+    padding: 0 5px;
+}
+
+.btn {
+    background-color: #202142;
+    border-radius: 4px;
+    border: none;
+    color: #ff0081;
+    font-weight: 400;
+}
+
+.nav-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(31, 29, 29);
+    margin-bottom: 0;
+    
+}
+.links {
+    display: flex;
+    width: 30%;
+    align-items: center;
+    justify-content: space-between;
+}
+.links ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    width: 100%;
+}
+
+.links ul li {
+    justify-content: space-between;
+}
+
+button {
+    font-weight: bold;
+    font-size: large;
+    
+}
+
+.logo {
+    margin-top: 10px;
+}
+
+.chip {
+    display: inline-block;
+    padding: 0 25px;
+    height: 150px;
+    width: 800px;
+    font-size: 16px;
+    border-radius: 25px;
+    background-color: #202142;
+    text-align: left;
+    padding-top: 25px;
+    margin-top: 10px;
+    margin-bottom: 5px;  
+    margin-left: 12px;  
+    justify-content: space-between;
+    
+  }
+
+  .card-text {
+      width: 60%;
+      
+  }
+
+  .btn-container {
+      display: flex;
+      justify-content: space-between;
+      width: 22%;
+      padding-top: 20px;
+      
+  }
+
+  .btn-container a {
+    margin-top: 5%; 
+  }
+
+  .contact-list {
+      width: 50%;
+      border-radius: 2%;
+      height: 70%;
+      margin: 0 auto;
+      background-color: rgb(126, 121, 121);
+      
+      
+  }
+  
+  .chip img {
+    float: left;
+    margin: 0 35px 0 -25px;
+    margin-left: 5px;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    
+  }
+  
+  #chiptext {
+    margin-left: 35px;
+  }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(0,0,0,0.4);
+    color: white;
+    text-align: center;
+    height: 2rem;
+ }
