--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,46 @@ button {
       
   }
 
+  .form {
+    padding: 16px;
+    background-color: #202142; 
+  }
+
+  input[type=text], input[type=email] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+
+  input[type=text]:focus, input[type=email]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+
+  .registerbtn {
+    background-color: #ff0081;
+    color: white;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+  }
+
+  form {
+      margin-top: 20px;
+      width: 50%;
+      margin-left: 25%;
+  }
+
+  .registerbtn:hover {
+    opacity: 1;
+  }
+
   .btn-container {
       display: flex;
       justify-content: space-between;
