--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,62 @@
     margin: 0;
     padding: 0;
   }
+#aboutme {
+  text-align: center;
+  padding-top: 4px;
+}
+
+#prome {
+  margin: 24px 0;
+  background-color: #ddd;
+}
+
+.container3 {
+  width: 60%;
+  text-align: center;
+  padding-top: 25px;
+  margin: auto;
+}
+
+.superholder{
+  display: flex;
+  padding-top: 20px;
+}
+
+#imgme {
+  width: 100%;
+}
+.cardme {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  padding-top: 20px;
+}
+
+#btnme button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #ff0081;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+#btnme button:hover, a:hover {
+  opacity: 0.7;
+}
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -18,6 +74,8 @@ body {
     margin: auto;
     padding: 0 5px;
 }
+
+
 
 .btn {
     background-color: #202142;
@@ -179,3 +237,52 @@ button {
     text-align: center;
     height: 2rem;
  }
+
+
+
+ @media (max-width: 700px) {
+
+  .nav-container{
+    display: block;
+    
+    margin: auto;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .links {
+    width: 100%;
+  }
+
+  .superholder{
+    display: block;
+  }
+  
+  .chip {
+    width: 500px;
+    
+    padding: 0 24;
+    
+    height: 150px;
+    font-size: 16px;
+    border-radius: 25px;
+    background-color: #202142;
+    text-align: left;
+    padding-top: 25px;
+    margin-top: 10px;
+    margin-bottom: 5px;  
+    margin-left: 12px;  
+    justify-content: space-around;
+  }
+
+  .contact-list {
+    width: 80%;
+    border-radius: 2%;
+    height: 70%;
+    margin: 0 auto;
+    background-color: rgb(126, 121, 121);
+    
+    
+}
+  
+} 
